rettet til en side

--- a/index.html
+++ b/index.html
@@ -9,36 +9,46 @@
 	<meta name="author" content="">
 	<title>Short.dk</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="container">
-		<div class="header">
-			<ul class="nav nav-pills pull-right">
-				<li class="active"><a href="index.html">Om</a>
-				</li>
-				<li><a href="ydelser.html">Ydelser</a>
-				</li>
-				<li><a href="kontakt.html">Kontakt</a>
-				</li>
-			</ul>
+			<div class="header">
 			<h1 class="text-muted">short<span class="text-danger">it</span></h1>
 		</div>
-
 		<div class="row well">
-			<h4>Velkommen</h4>
+			<div class="col-lg-6">
+				<h4>Staminformation</h4>
+				<address>
+					<span class="text-muted">short<span class="text-danger">it</span></span><br>
+					Elbagade 47, 3th<br>
+					2300 København S<br>
+					Danmark<br>
+					<br>
+					CVR: xyz<br>
+					<br>
+					Bank: LSB<br>
+					Reg. nr. <br>
+					Kontonr: <br>
+				</address>
+			</div>
+
+			<div class="col-lg-6">
+				<h4>Ejer</h4>
+				<address>
+					<i class="fa fa-user fa-fw"></i> <strong>Tinus Aamand Norstved</strong><br>
+					<i class="fa fa-mobile-phone fa-fw"></i> 51 29 48 47<br>
+					<i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:tinus@short.dk">tinus@short.dk</a><br>
+					<i class="fa fa-linkedin fa-fw"></i> <a href="https://www.linkedin.com/in/tinusnorstved">LinkedIn</a><br>
+				</address>
+			</div>
 		</div>
 
 		<div class="footer">
-			<p><small>&copy; Tinus Aamand Norstved 2014</small></p>
+			<p><small>&copy; 2014 Tinus Aamand Norstved</small></p>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
