--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h1 class="text-muted">short<span class="text-danger">it</span></h1>
 		</div>
 		<div class="row well">
-			<div class="col-lg-6">
+			<div class="col-xs-6">
 				<h4>Staminformation</h4>
 				<address>
 					<span class="text-muted">short<span class="text-danger">it</span></span><br>
@@ -34,7 +34,7 @@
 				</address>
 			</div>
 
-			<div class="col-lg-6">
+			<div class="col-xs-6">
 				<h4>Ejer</h4>
 				<address>
 					<i class="fa fa-user fa-fw"></i> <strong>Tinus Aamand Norstved</strong><br>
