--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 					2300 København S<br>
 					Danmark<br>
 					<br>
-					CVR: xyz<br>
-					<br>
-					Bank: LSB<br>
-					Reg. nr. <br>
-					Kontonr: <br>
+					CVR: 35611207<br>
 				</address>
 			</div>
 
