--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 					<i class="fa fa-mobile-phone fa-fw"></i> 51 29 48 47<br>
 					<i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:tinus@short.dk">tinus@short.dk</a><br>
 					<i class="fa fa-linkedin fa-fw"></i> <a href="https://www.linkedin.com/in/tinusnorstved">LinkedIn</a><br>
+					<i class="fa fa-github fa-fw"></i> <a href="https://github.com/tinusn">Github</a><br>
 				</address>
 			</div>
 		</div>
 
 		<div class="footer">
-			<p><small>&copy; 2014 Tinus Aamand Norstved</small></p>
+			<p><small>&copy; 2014-2015 Tinus Aamand Norstved</small></p>
 		</div>
 	</div>
 </body>
