--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 					2300 København S<br>
 					Danmark<br>
 					<br>
-					CVR: 35611207<br>
 				</address>
 			</div>
 
@@ -34,7 +33,6 @@
 				<h4>Ejer</h4>
 				<address>
 					<i class="fa fa-user fa-fw"></i> <strong>Tinus Aamand Norstved</strong><br>
-					<i class="fa fa-mobile-phone fa-fw"></i> 51 29 48 47<br>
 					<i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:tinus@short.dk">tinus@short.dk</a><br>
 					<i class="fa fa-linkedin fa-fw"></i> <a href="https://www.linkedin.com/in/tinusnorstved">LinkedIn</a><br>
 					<i class="fa fa-github fa-fw"></i> <a href="https://github.com/tinusn">Github</a><br>
@@ -43,7 +41,7 @@
 		</div>
 
 		<div class="footer">
-			<p><small>&copy; 2014-2015 Tinus Aamand Norstved</small></p>
+			<p><small>&copy; Tinus Aamand Norstved</small></p>
 		</div>
 	</div>
 </body>
