--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="row well">
 			<div class="col-xs-6">
 				<address>
-					<i class="fa fa-building fa-fw"></i>CVR 35611207<br>
+					<i class="fa fa-file fa-fw"></i>CVR 35611207<br>
 					<i class="fa fa-user fa-fw"></i> <strong>Tinus Aamand Norstved</strong><br>
 					<i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:tinus@short.dk">tinus@short.dk</a><br>
 					<i class="fa fa-linkedin fa-fw"></i> <a href="https://www.linkedin.com/in/tinusnorstved">LinkedIn</a><br>
